# GrandFrix

./: CMakeLists.txt  README.md  cmake.sh
examples/dry/: gran.shear  restart1000
examples/init/: gran.init  mkjpeg_all.sh  pstojpeg.dws.sh
examples/inputs/: gran.init_side_walls  gran.shear_fixed_V.shear  gran.shear_spring.shear
examples/with_fluid/: gran.shear  mkjpeg.sh  mkjpeg_all.sh  restart_final
src/: GranLayer.f90  Makefile  breaks.f90  defect.f90  findforces.f90  force.f90  generate.f90  init.f90  inputReader.f90  linklist.f90  mycommons.f90  outputWriter.f90  postScriptTool.f90  principalstress.f90  pssubs.f90  rotate.f90  rw_conf.f90  smoothNonExtended.f90  updatePressure.f90  vel_ver.f90
